# computer-use-preview-kogo

./: .gitignore  Dockerfile  README.md  agent.py  county_data_dict.py  docker_compose.yaml  main.py  prompts.md  requirements.txt  run_direct.py  run_docker.sh  user_prompt.py  utils.py
.github/workflows/: main.yaml
apiserver/: Dockerfile  README.md  app.py  cloud_pubsub.py  commands.py  config.py  conftest.py  models.py  pubsub.py  requirements.txt  sessions.py  test_app.py  test_cloud_pubsub.py  test_commands.py  test_config.py  test_models.py  test_pubsub.py  test_sessions.py
apiserver/static/: index.html  index.js  session.html  session.js  style.css
common/utils/: county_data_dict.py  gpt_data_extraction.py  main.py
computer_use_gemini/: MANIFEST.in  pyproject.toml  run.py
computers/: __init__.py  computer.py  data_extraction_prompt.py
computers/browserbase/: browserbase.py
computers/cloud_run/: cloud_run.py
computers/playwright/: playwright.py
computers/puppeteer/: .mocharc.json  Dockerfile  README.md  browser.ts  command.ts  index.ts  package-lock.json  package.json  run-command.sh  signalling.ts
computers/puppeteer/test/: browser.spec.ts  command.spec.ts  signaling.spec.ts
docs/: VIDEO_RECORDING_IMPLEMENTATION.md
sdk/: google_genai-1.14.0-py3-none-any.whl
test/: gemini_extraction_sample.py  parcels_data.json  problems.md  prompts.md  test_new_methods.py  tmp.md
test/computers/playwright/: playwright.py
utils/: county_data_dict.py  data_extraction_prompt.py  gemini_extraction.py  user_prompt copy.py  user_prompt.py
