[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computer-use-preview-kogo"
version = "0.1.0"
description = "Computer use preview package with common utilities and Gemini integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Vikas Rajpoot", email = "your.email@example.com"}
]
keywords = ["computer-use", "gemini", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Add your dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/rajpoot-vikas/computer-use-preview-kogo"
Repository = "https://github.com/rajpoot-vikas/computer-use-preview-kogo"
Issues = "https://github.com/rajpoot-vikas/computer-use-preview-kogo/issues"

[tool.setuptools]
packages = ["common", "computer_use_gemini"]

[tool.setuptools.package-data]
common = ["py.typed"]
computer_use_gemini = ["py.typed"]
